# Blockadeer

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml
src/backend/: Cargo.toml
src/backend/src/: main.rs
src/frontend/: next.config.mjs  package.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/blocklists/: page.tsx
src/frontend/app/custom-rules/: page.tsx
src/frontend/app/database/: page.tsx
src/frontend/app/devices/: page.tsx
src/frontend/app/query-log/: page.tsx
src/frontend/app/schedules/: page.tsx
src/frontend/app/settings/: page.tsx
src/frontend/app/upstream-dns/: page.tsx
src/frontend/components/: app-sidebar.tsx  theme-provider.tsx
src/frontend/components/dashboard/: blocklists-card.tsx  custom-rules-table.tsx  dashboard-header.tsx  database-settings.tsx  devices-table.tsx  global-settings.tsx  hourly-distribution-chart.tsx  queries-chart.tsx  query-log-card.tsx  schedules-table.tsx  stats-cards.tsx  system-status-card.tsx  top-blocked-chart.tsx  upstream-dns-settings.tsx
src/frontend/components/ui/: sidebar.tsx
src/frontend/hooks/: use-dashboard-ws.ts
src/shared/: Cargo.toml
src/shared/src/: lib.rs
