[workspace]
resolver = "3"
members = [
    "src/shared",
    "src/backend",
]
exclude = [
    "src/frontend",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88.0"
authors      = ["Hyphonical"]
license      = "MIT"
repository   = "https://github.com/Hyphonical/Blockadeer"

[profile.release]
opt-level     = "z"
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"

[profile.dev]
opt-level = 0
debug     = true
