[package]
name         = "blockadeer-shared"
description  = "Shared types for Blockadeer frontend and backend"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88.0"
authors      = ["Hyphonical"]
license      = "MIT"

[dependencies]
serde      = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
